Fix: Text overflow fix

--- a/src/pages/ItemsPage/components/itemsCard/itemsCard.styles.css
+++ b/src/pages/ItemsPage/components/itemsCard/itemsCard.styles.css
@@ -58,7 +58,7 @@
     text-overflow: ellipsis;
     word-break: break-all;
     width: 80%;
-    max-height: 18px;
+    max-height: 16px;
 }
 
 .Items-card .name img {
